Fix intermediate operations